Add start for worker