@@ -35,21 +35,21 @@ public class SchedulerWorkflowImpl implements SchedulerWorkflow {
     /* ─────────── DI ─────────── */
     private final SchedulingModuleProperties props;
     private final Map<String, SchedulingStrategy> strategies;
-    private DispatchActivity dispatch;
-
-    public SchedulerWorkflowImpl(SchedulingModuleProperties p,
-                                 Map<String,SchedulingStrategy> reg,
-                                 DispatchActivity a) {
-        this.props = p;  this.strategies = reg;  this.dispatch = a;
-    }
-
     /* ─────────── state ─────────── */
     private final Queue<Task> ready = new LinkedList<>();
     private final Deque<Instant> window = new ArrayDeque<>();   // скользящее окно
     private final List<Promise<Void>> async = new ArrayList<>();
-
+    private DispatchActivity dispatch;
     private SchedulingStrategy strategy;
     private SchedulingModuleProperties.ClientProperties cfg;
+
+    public SchedulerWorkflowImpl(SchedulingModuleProperties p,
+                                 Map<String, SchedulingStrategy> reg,
+                                 DispatchActivity a) {
+        this.props = p;
+        this.strategies = reg;
+        this.dispatch = a;
+    }
 
     /* ═════════════ Workflow API ═════════════ */
 
@@ -73,7 +73,10 @@ public class SchedulerWorkflowImpl implements SchedulerWorkflow {
                 Task next = ready.stream()
                         .min(strategy::compare)
                         .orElse(null);
-                if (next == null) { Workflow.await(() -> !ready.isEmpty()); continue; }
+                if (next == null) {
+                    Workflow.await(() -> !ready.isEmpty());
+                    continue;
+                }
                 ready.remove(next);
 
                 /* back-pressure BEFORE dispatch */
@@ -100,41 +103,56 @@ public class SchedulerWorkflowImpl implements SchedulerWorkflow {
     }
 
     /* ───── signals / query ───── */
-    @Override public void submitTasks(List<Task> tasks){ ready.addAll(tasks); }
-
-    @Override public void reportUsage(String tenant, double cost) {
-        if (strategy instanceof UsageAwareStrategy u)
-            u.recordUsage(tenant, cost, now());
+    @Override
+    public void submitTasks(List<Task> tasks) {
+        ready.addAll(tasks);
     }
 
-    @Override public int getQueueLength(){ return ready.size(); }
+    @Override
+    public void reportUsage(String tenant, double cost) {
+        if (strategy instanceof UsageAwareStrategy u) {
+            u.recordUsage(tenant, cost, now());
+        }
+    }
+
+    @Override
+    public int getQueueLength() {
+        return ready.size();
+    }
 
     /* ─────────── helpers ─────────── */
-    private SchedulingStrategy buildStrategy(String name){
+    private SchedulingStrategy buildStrategy(String name) {
         List<SchedulingStrategy> list = Arrays.stream(name.split("\\+"))
                 .map(strategies::get).toList();
-        return list.size()==1 ? list.get(0) : new CompositeSchedulingStrategy(list);
+        return list.size() == 1 ? list.getFirst() : new CompositeSchedulingStrategy(list);
     }
 
-    private Instant now(){ return Instant.ofEpochMilli(Workflow.currentTimeMillis()); }
+    private Instant now() {
+        return Instant.ofEpochMilli(Workflow.currentTimeMillis());
+    }
 
     /* запись метки времени успешного dispatch-а */
-    private void recordDispatch(){ window.addLast(now()); }
+    private void recordDispatch() {
+        window.addLast(now());
+    }
 
     /* скользящее окно + динамический sleep */
-    private void throttleIfNeeded(){
+    private void throttleIfNeeded() {
         long W = props.getBackpressure().getWindowSeconds();
         double limit = props.getBackpressure().getThroughputFactor();  // задач / сек
 
         Instant border = now().minusSeconds(W);
-        while (!window.isEmpty() && window.peekFirst().isBefore(border))
+        while (!window.isEmpty() && window.peekFirst().isBefore(border)) {
             window.removeFirst();
+        }
 
         double rate = window.size() / (double) W;      // фактический QPS
-        if (rate <= limit) return;
+        if (rate <= limit) {
+            return;
+        }
 
-        double excess = rate/limit - 1.0;              // 0 … ∞
-        long sleepMs = (long)(excess * W * 1000);      // ≤ W с
+        double excess = rate / limit - 1.0;              // 0 … ∞
+        long sleepMs = (long) (excess * W * 1000);      // ≤ W с
         log.debug("Back-pressure: qps {} > {}, sleep {} ms", rate, limit, sleepMs);
         Workflow.sleep(Duration.ofMillis(sleepMs));
     }
